# Fancy-Ai

./: .gitignore  AGENTS.md  Bugs.md  CLAUDE.md  MAP.md  README.md
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/assets/js/apps/: contacts.js  gallery.js  games.js  imaging.js  messenger.js  phone.js  rebbit.js  settings.js  ustagram.js  y.js
app/src/main/assets/js/core/: api.js  characters.js  db.js  images.js  state.js
app/src/main/cpp/: CMakeLists.txt  jni.cpp
app/src/main/java/com/mrj/fancyai/: AutonomousWorker.java  FancyAiForegroundService.java  FileService.kt  MNNInference.java  MainActivity.java  MainActivity.kt  PermissionManager.kt  SttService.kt  TtsService.kt
app/src/main/java/com/mrj/fancyai/data/db/: AppDatabase.kt
app/src/main/java/com/mrj/fancyai/data/db/dao/: SocialPostDao.kt
app/src/main/java/com/mrj/fancyai/data/repository/: MediaRepository.kt  SocialRepository.kt
app/src/main/java/com/mrj/fancyai/di/: ServiceLocator.kt
app/src/main/java/com/mrj/fancyai/ui/gallery/: GalleryScreen.kt  GalleryViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/imaging/: ImagingScreen.kt  ImagingViewModel.kt
app/src/main/java/com/mrj/fancyai/ui/social/: SocialScreen.kt  SocialViewModel.kt
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
